# data_evaluation

./: cleanup.py  format_ui.py  gr3_task_configs.json  main.py  pyproject.toml  qnexo_repo_id_cache.json  qnexo_task_configs.json  start_all.sh  start_worker.py  test_plotly.py
scripts/: generate_qnexo_tasks.py
src/: app.py
src/assets/: style.css
src/engines/: __init__.py
src/engines/pnp_detector/: data_detector.py
src/ui/: __init__.py
src/ui/duration_check/: __init__.py  callbacks.py  layout.py
src/ui/pilot/: __init__.py  callbacks.py  layout.py
src/ui/pnp/: __init__.py  callbacks.py  layout.py
src/ui/pnp_check/: __init__.py  callbacks.py  layout.py
src/ui/pnp_result/: callbacks.py  layout.py
src/utils/: __init__.py  cache.py  data_parser.py  redis_cache.py  result_db.py  s3_client.py  source_db.py
src/workers/: pnp_worker.py
